GNOME Bugzilla – Bug 725517
docs: Fix typos and remove unknown annotations
Last modified: 2014-03-02 20:57:09 UTC
When compiling the docs I notice these warnings: gstbufferpool.c:1087: Warning: Gst: missing ":" at column 41: * @params: (transfer none) (allow-none) parameters. ^ gstmeta.c:153: Warning: Gst: missing ":" at column 29: * @init_func: (scope async) a #GstMetaInitFunction ^ gstmeta.c:154: Warning: Gst: missing ":" at column 29: * @free_func: (scope async) a #GstMetaFreeFunction ^ gstmeta.c:155: Warning: Gst: missing ":" at column 34: * @transform_func: (scope async) a #GstMetaTransformFunction ^ The propposed patch will remove these and remove the usage of unrecognized (optional) and (replacement) annotations used in GstBaseParseFrame. These two annotation tags are neither known by gtk-doc nor by gobject-introspection.
Created attachment 270717 [details] [review] Proposed patch to fix annotation typos an unknown tags.
The following fix has been pushed: 034a3ab docs: Fix typos and remove unknown annotations
Created attachment 270719 [details] [review] docs: Fix typos and remove unknown annotations Fixes