docs: Fix typos and remove unknown annotations

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=725517